[package]
name = "market_faas"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
edition = "2018"

[dependencies]

rayon = "1.0.1"
serde_json = "1.0"
serde = "1.0"
hull_white = "0.3.3"
serde_derive = "1.0"
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
rand = "0.6.4"
[dev-dependencies]
approx = "0.2.0"


[badges]
travis-ci = { repository = "phillyfan1138/market_faas" }