[package]
name = "market_faas"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
edition = "2018"

[dependencies]

rayon = "1.0.1"
serde_json = "1.0"
serde = "1.0"
hull_white = "0.4.0"
serde_derive = "1.0"
lambda_http = { git = "https://github.com/phillyfan1138/aws-lambda-rust-runtime", rev = "b7e5da5" }
lambda_runtime = { git = "https://github.com/phillyfan1138/aws-lambda-rust-runtime", rev = "b7e5da5" }
rand = "0.6.4"

[badges]
travis-ci = { repository = "phillyfan1138/market_faas" }